--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Angular QuickStart</title>
+    <title>Angular 2 Website</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
-
-    <!-- Polyfill(s) for older browsers -->
+    <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
+    
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
     <script src="node_modules/zone.js/dist/zone.js"></script>
@@ -20,6 +20,7 @@
   </head>
 
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+    <base href='/'>
+    <my-app></my-app>
   </body>
 </html>
